Fixed alignments for name, ability name and ability desc

--- a/extension/blossom-extension/src/components/CardTemplateComponent.css
+++ b/extension/blossom-extension/src/components/CardTemplateComponent.css
@@ -21,7 +21,7 @@
     color: white;
     position: absolute;
     top: 5px;
-    width: 90%;
+    width: 30%;
     z-index: 2;
 }
 
@@ -33,7 +33,7 @@
     border-radius: 3px;
     font-size: small;
     text-align: center;
-    width: 45%;
+    width: 70px;
 }
 
 #cardImageContainer {
@@ -52,46 +52,54 @@
 
 #name {
     position: absolute;
-    font-size: large;
-    top: 60%;
-    width: 95%;
+    font-size: medium;
+    left: 25px;
+    top: 62%;
+    height: 5%;
+    width: 70%;
     text-align: center;
     font-weight: bold;
     color: white;
     z-index: 2;
     padding: 2px 5px;
-    background-color: rgba(0, 0, 0, 0.5);
     border: none;
 }
 
 #cardFooter {
-    display: flex;
-    flex-direction: column;
+    display: block;
     align-items: center;
-    padding: 5px;
-    background-color: rgba(0, 0, 0, 0.5);
+    padding: 4px;
     color: white;
     position: absolute;
     bottom: 10px;
-    width: 90%;
+    width: 67%;
     height: 25%;
-    z-index: 2;
-    left: 10px;
+    left: 25px;
     font-size: small;
 }
 
 #abilityName {
+    display: flex;
+    width: 100%;
     margin-bottom: 3px;
 }
 
 #abilityDescription {
+    display: flex;
     font-size: xx-small;
-    text-align: center;
+    text-align: justify-all;
     margin-bottom: 3px;
+    width: 100%;
+    height: 55%;
+    word-wrap: break-word;
+    word-break: break-all;
+    resize: none;
 }
 
 #tp {
+    display: flex;
     margin-top: 5px;
+    width: 5%;
 }
 
 .submitButton {
